<resources>
    <string name="app_name">La burra Jimena</string>
    <string name="desayunos_personalizados">Desayunos personalizados</string>
    <string name="logo_de_la_burra_jimena">logo de la burra Jimena</string>
    <string name="user_button">User button</string>
    <string name="log_in">Log in</string>
    <string name="btnLoginDescription">Botón para hacer log in</string>
    <string name="Entrar">Entrar</string>
    <string name="String_product_description">Imagen del producto</string>
    <string name="este_es_un_texto_de_prueba">Este es un texto de prueba</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="IconHint">Pulsa dos veces en el icono para añadir al desayuno</string>
    <string name="IconAddDescription">Icon for add product to order</string>
    <string name="IconOrderDescription">Icon of orders</string>
    <string name="Inicio" />
    <string name="Inicio_2">Inicio</string>
    <string name="btnLoginBack">Botón para volver a la actividad principal</string>
    <string name="Volver">Volver</string>
    <string name="Email_hint">Introduce tu Email</string>
    <string name="passwordhint">Introduce tu contraseña</string>
    <string name="enviar_resource">Enviar</string>
    <string name="IntroEmail">Introduce tu Email</string>
    <string name="hintEnterPassword">Introduce tu password</string>
    <string name="text_login">Introduce tus credenciales</string>
    <string name="sendLogin">Enviar</string>
    <string name="button_to_subtract_product">button to subtract product</string>
    <string name="button_to_increase_product">button to increase product</string>
    <string name="button_to_subtract_product2">button to subtract product</string>
    <string name="Products_added_title">Contenido del desayuno añadido:</string>
    <string name="btn_confirm_order">Confirmar desayuno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="helper_required">Necesario</string>
    <string name="edit_User_title_add">Editar usuario</string>
</resources>