<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_radius">

   <androidx.cardview.widget.CardView
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       app:cardCornerRadius="45dp"
       android:layout_margin="8dp"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:background="#FDFAFA"
           >

           <ImageView
               android:id="@+id/ivProduct"
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_gravity="center"
               android:contentDescription="@string/imagen_del_producto" />

           <TextView
               android:id="@+id/tvnameProduct"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textColor="@color/magenta"

               android:textSize="24sp"
               android:textStyle="bold"
               tools:text="Esto es un producto de prueba" />

           <TextView
               android:id="@+id/tvProductDescription"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textColor="@color/black"
               android:textStyle="bold"
               tools:text="Esta es uan descripcción de prueba" />

           <ImageButton
               android:id="@+id/IconAdd"
               android:layout_width="78dp"
               android:layout_height="48dp"
               android:layout_gravity="center"
               android:background="#FDFAFA"
               android:clickable="true"
               android:contentDescription="@string/IconAddDescription"
               android:focusable="true"
               android:focusableInTouchMode="true"

               android:src="@drawable/ic_add_shopping_cart" />

           <TextView
               android:id="@+id/tvIconHint"
               android:layout_width="272dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/IconHint"
               android:textColor="@color/black" />



       </LinearLayout>

   </androidx.cardview.widget.CardView>








</androidx.constraintlayout.widget.ConstraintLayout>