<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_radius"
        tools:context=".LoginActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/btnUser"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/user_button"
            app:layout_constraintBottom_toTopOf="@id/crdTitle"
            app:layout_constraintEnd_toEndOf="@id/MainLayoutLogin"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="@id/MainLayoutLogin"
            app:layout_constraintTop_toTopOf="@id/MainLayoutLogin"
            app:layout_constraintVertical_bias="0.01999998"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#F06292"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="@id/MainLayoutLogin"
            app:layout_constraintStart_toStartOf="@id/MainLayoutLogin"
            app:layout_constraintTop_toBottomOf="@id/btnUser">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FDFAFA"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="147dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/logo_de_la_burra_jimena"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@drawable/im_logo" />

                <TextView
                    android:id="@+id/textoLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lobster_regular"
                    android:gravity="center_horizontal|start"
                    android:paddingTop="20dp"
                    android:text="@string/desayunos_personalizados"
                    android:textAlignment="center"
                    android:textColor="@color/magenta_variant"
                    android:textSize="34sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/crdTitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/common_margin_max"
            android:layout_marginEnd="16dp"
            android:background="@color/white_pearl"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="@id/MainLayoutLogin"
            app:layout_constraintStart_toStartOf="@id/MainLayoutLogin"
            app:layout_constraintTop_toBottomOf="@id/crdTitle">

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCurrentOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crdTitle"
            android:layout_marginTop="@dimen/common_margin_max"
            tools:listitem="@layout/current_order_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>